--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>hello</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>abc</module>
+        <module>abc11</module>
     </modules>
     <packaging>pom</packaging>
 
